# MySchoolCode

./: .gitignore  1_EasyDefinition.java  CMakeLists.txt  CircleTest.java  EasyDefinition.java  LICENSE  README.md  SchoolCharacter.java  commit规范.txt
CProgramExercise/PTA/: 1-1.c  1-10.c  1-2.c  1-3.c  1-4.c  1-5Joseph ring.c  1-6.c  1-7.c  1-9BigNumSum.c  1.8.c  2-1QuickSort.c  2-2.c  2-3BigNumMulti.c  2-4Hanoi.c
CProgramExercise/iMooc/: Arrangement.c  Combination.c  Hourse.c  Matrix.c  SortEvaluate.c
CProgramExercise/iMooc/MultipleLinearRegression/: MLR.c
DataStructExercise/PTA/: 7-1.c  7-2 new.c  7-3.c  7-4.c  7-5.c
DataStructer/: 栈.c  线性表.c
PTA数据结构练习/: 6-1单链表逆转.c  6-2 顺序表操作集.c  6-3求链式表表长.c  6-4 链式表的按序号查找.c  6-5 链式表操作集.c  6-6 带头结点的链式表操作集.c  6-7 在一个数组中实现两个堆栈.c  compare.c
exportToHTML/: comp1.c.html
test/: comp1.c
