cmake_minimum_required(VERSION 3.19)
project(MySchoolCode C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(MySchoolCode
#CProgramExercise/PTA/1-1.c
#        CProgramExercise/PTA/1-2.c
#        CProgramExercise/PTA/1-3.c
#        CProgramExercise/PTA/1-4.c
#        "CProgramExercise/PTA/1-5Joseph ring.c"
#        CProgramExercise/PTA/1-6.c
#        CProgramExercise/PTA/1-7.c
#        CProgramExercise/PTA/1-9BigNumSum.c
#        CProgramExercise/PTA/test.c
#        CProgramExercise/PTA/1.8.c
        CProgramExercise/PTA/1-10.c
        )
